Change bot creds

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,6 +1,6 @@
 bot:
-  username: "@AlkoMathBot"
-  token: "6124541508:AAGa4nBLn9YvunN9tDdj4dBC4XS72m_6j2E"
+  username: "@pitershotbot"
+  token: "6262778178:AAE0YaHBM3XVR_-n0xREoR5AbvcGu0wslQc"
   masterId: 212354346
 
 
